--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,14 @@
 [[redirects]]
-from = "index.html"
-to = "opções.html"
-status = 200
-force = false
+  from = "/old-path"
+  to = "/new-path"
+  status = 301
+  force = false
+  query = {path = ":path"}
+
+
+
+[[redirects]]
+  from = "/produtos"
+  to = "opções.html"
+  status = 200
+  force = true 
